@@ -17,6 +17,7 @@ Misc work going on.....
 * PHP 4.1 compatibility fix: don't use new_link parameter to mysql_connect
   if running prior to 4.2.0 as it causes the call to fail
 * (bug 3117) Fix display of upload size and type with tidy on
+* (bug 3076) Support MacBinary-encoded uploads from IE/Mac
 
 
 === Caveats ===
